--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/web-component-tester/bin/wct"
   },
   "repository": {
     "type": "git",
@@ -30,7 +30,8 @@
     "babel-preset-latest": "^6.16.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-sourcemaps": "^1.6.0"
+    "gulp-sourcemaps": "^1.6.0",
+    "web-component-tester": "^4.3.5"
   },
   "dependencies": {}
 }
